remove stacker verification from block proposal check, update docs
